2012-12-23  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/ppscan.l: fixed a nasty "semiclon after if" error

2012-12-22  Borut Razem  <borutr@users.sourceforge.net>
  * AUTHORS: corrected Borut's email address

2012-12-14  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/lst.c: removed assertion for RELOCT_FF1 and RELOCT_FF2
    since it fails during sdcc pic16 library compilation;
    disabled all print_reloc() assertions

2012-12-09  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/testsuite/gpasm.mchip/asmfiles/list11.asm;
    gpasm/testsuite/gpasm.mchip/listfiles/list11.lst,
    gpasm/testsuite/gpasm.mchip/hexfiles/list11.hex:
    regression tests adapted for gpasm

2012-12-09  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/gperror.c, gpasm/lst.c, gpasm/directive.c:
    error message and listing enhancements
  * gpasm/testsuite/gpasm.mchip/asmfiles/hd642.asm,
    gpasm/testsuite/gpasm.mchip/listfiles/hd642.lst,
    gpasm/testsuite/gpasm.mchip/hexfiles/hd642.hex,
    gpasm/testsuite/gpasm.mchip/asmfiles/hd658.asm,
    gpasm/testsuite/gpasm.mchip/listfiles/hd658.lst,
    gpasm/testsuite/gpasm.mchip/hexfiles/hd658.hex,
    gpasm/testsuite/gpasm.mchip/asmfiles/hd662.asm,
    gpasm/testsuite/gpasm.mchip/listfiles/hd662.lst,
    gpasm/testsuite/gpasm.mchip/hexfiles/hd662.hex,
    gpasm/testsuite/gpasm.mchip/asmfiles/hd858.asm,
    gpasm/testsuite/gpasm.mchip/listfiles/hd858.lst,
    gpasm/testsuite/gpasm.mchip/hexfiles/hd858.hex,
    gpasm/testsuite/gpasm.mchip/asmfiles/hd870.asm,
    gpasm/testsuite/gpasm.mchip/listfiles/hd870.lst,
    gpasm/testsuite/gpasm.mchip/asmfiles/hd871.asm,
    gpasm/testsuite/gpasm.mchip/listfiles/hd871.lst,
    gpasm/testsuite/gpasm.mchip/asmfiles/hd872.asm,
    gpasm/testsuite/gpasm.mchip/listfiles/hd872.lst,
    gpasm/testsuite/gpasm.mchip/asmfiles/list8.asm,
    gpasm/testsuite/gpasm.mchip/listfiles/list8.lst,
    gpasm/testsuite/gpasm.mchip/asmfiles/list9.asm,