@@ -1,3 +1,8 @@
+2012-12-31  Borut Razem  <borutr@users.sourceforge.net>
+  * gpasm/lst.h, gpasm/gpasm.c, gpasm/directive.c, gpasm/gpasm.h.in,
+    gpasm/preprocess.c, gpasm/parse.y, gpasm/lst.c, doc/gputils.lyx:
+    implemented RFE #17 - "output asm text after macro substitution"
+
 2012-12-23  Borut Razem  <borutr@users.sourceforge.net>
   * gpasm/ppscan.l: fixed a nasty "semiclon after if" error
 
